build: update all the things
Also trying to remove as many build warnings as possible in the process